@@ -1,3 +1,8 @@
+2007-03-01  Brooks Moses  <brooks.moses@codesourcery.com>
+
+	* Makefile.am: Add dummy install-pdf target.
+	* Makefile.in: Regenerate
+
 2007-02-05  Roman Zippel <zippel@linux-m68k.org>
 
 	* boehm-gc/include/private/gcconfig.h: use LINUX_STACKBOTTOM so
